<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Uschedule</string>
    <string name="action_settings">Settings</string>
    <string name="personal_settings">Personal</string>
    <string name="others_look">in</string>
    <string name="title_section1">View 1</string>
    <string name="title_section2">View 2</string>
    <string name="title_section3">View 3</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_am">Am</string>
    <string name="title_activity_bm">Bm</string>
    <string name="today">Today</string>
    <string name="jump_to">JumpTo</string>
    <string name="schedule">Schedule</string>
    <string name="solar_lunar">Solar/Lunar</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
	<string name="add_schedule">Please write down your schedule ...</string>
	<string name="test_button">test_button</string>
	<string name="btn_today">btnToday</string>
	
</resources>